com.top_logic/src/main/java/com/top_logic/base/search/parser/QueryInfix.java
// $codepro.audit.disable
/*
 * SPDX-FileCopyrightText: 2001 (c) Business Operation Systems GmbH <info@top-logic.com>
 * 
 * SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-BOS-TopLogic-1.0
 */
/* Generated By:JavaCC: Do not edit this line. QueryInfix.java */
package com.top_logic.base.search.parser;

import java.util.ArrayList;
import java.util.HashMap;

import com.top_logic.base.search.Query;
import com.top_logic.base.search.QueryException;
import com.top_logic.base.search.QueryNode;
import com.top_logic.base.search.nodes.AllNode;
import com.top_logic.base.search.nodes.BinaryFilter;
import com.top_logic.base.search.nodes.BinaryOper;
import com.top_logic.base.search.nodes.ExampleNode;
import com.top_logic.base.search.nodes.LiteralNode;
import com.top_logic.base.search.nodes.UnaryFilter;
import com.top_logic.base.search.nodes.UnaryOper;

/** Parser for Knowledge Queries in infix notation.
 *
 * @author  <a href="mailto:kha@top-logic.com">Klaus Halfmann</a>
 */
public final class QueryInfix implements QueryInfixConstants {

    /** This is called by the CTor of Query to do the actual parsing.
     *
     * @param expression The Query language Expression to be parsed.
     *
     * @return aQuery after parsing the expression.
     *
     * @throws QueryException on Syntactically and semantically Errors.
     */
    public static Query parse(String expression) throws QueryException {
        QueryInfix qi = new QueryInfix(new java.io.StringReader(expression));
        try {
            return qi.query();
        } catch (ParseException e) {return null; }
    }

  final public Query query() throws ParseException, QueryException {
    QueryNode   root  = null;
    String[]    order = null;
    root = expression();
    if (jj_2_1(2)) {
      order = orderBy();
    } else {
      
    }
    jj_consume_token(0);
      {if (true) return new Query(root,order);}
    throw new Error("Missing return statement in function");
  }

  final public QueryNode expression() throws ParseException, QueryException {
    Token           t;
    QueryNode       n1,n2;
    LiteralNode     lt1,lt2;
    if (jj_2_17(2)) {
      n1 = allOrNone();
        {if (true) return n1;}
    } else if (jj_2_18(2)) {
      t = jj_consume_token(NOT);
      jj_consume_token(OPEN);
      n1 = expression();
      jj_consume_token(CLOSE);
        {if (true) return new UnaryOper(t.kind, n1);}
    } else if (jj_2_19(2)) {
      t = jj_consume_token(EXAMPLE);
      jj_consume_token(OPEN);
        {if (true) return example();}
    } else if (jj_2_20(2)) {
      if (jj_2_2(2)) {
        t = jj_consume_token(ID);
      } else if (jj_2_3(2)) {
        t = jj_consume_token(TYPE);
      } else if (jj_2_4(2)) {
        t = jj_consume_token(TEXT);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(OPEN);
      lt1 = literal();
      jj_consume_token(CLOSE);
        {if (true) return new UnaryFilter(t.kind, lt1);}
    } else if (jj_2_21(2)) {
      jj_consume_token(OPEN);
      lt1 = identifier();
      if (jj_2_5(2)) {
        t = jj_consume_token(EQUALS);
      } else if (jj_2_6(2)) {
        t = jj_consume_token(LT);
      } else if (jj_2_7(2)) {
        t = jj_consume_token(GT);
      } else if (jj_2_8(2)) {
        t = jj_consume_token(LE);
      } else if (jj_2_9(2)) {
        t = jj_consume_token(GE);
      } else if (jj_2_10(2)) {
        t = jj_consume_token(ISIN);
      } else if (jj_2_11(2)) {
        t = jj_consume_token(LIKE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      lt2 = attribute();
      jj_consume_token(CLOSE);
        {if (true) return new BinaryFilter(t.kind, lt1, lt2);}
    } else if (jj_2_22(2)) {
      jj_consume_token(OPEN);
      n1 = expression();
      if (jj_2_12(2)) {
        t = jj_consume_token(AND);
      } else if (jj_2_13(2)) {
        t = jj_consume_token(OR);
      } else if (jj_2_14(2)) {
        t = jj_consume_token(MATCHES);
      } else if (jj_2_15(2)) {
        t = jj_consume_token(ISSOURCE);
      } else if (jj_2_16(2)) {
        t = jj_consume_token(ISDEST);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      n2 = expression();
      jj_consume_token(CLOSE);
        {if (true) return new BinaryOper(t.kind, n1, n2);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public AllNode allOrNone() throws ParseException, QueryException {
    Token       t;
    t = jj_consume_token(ALLORNONE);
        if (t.image.startsWith("A"))      // "A", "ALL"
            {if (true) return AllNode.ALL;}
        else                              // "N", "NONE" 
            {if (true) return AllNode.NONE;}
    throw new Error("Missing return statement in function");
  }

/** Parse an ExampleNode as list of Attribute/VAlue pairs */
  final public ExampleNode example() throws ParseException, QueryException {
    HashMap map = new HashMap();
    examplePair(map);
    jj_consume_token(CLOSE);
        {if (true) return new ExampleNode(map);}
    throw new Error("Missing return statement in function");
  }

/** Recursivly build up a Map with key / value pairs */
  final public void examplePair(HashMap map) throws ParseException, QueryException {
    Token       ident;
    LiteralNode literal;
    ident = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    literal = literal();
    if (jj_2_23(2)) {
      jj_consume_token(COMMA);
      examplePair(map);
    } else {
      
    }
        map.put (ident.image, literal.getValue());
  }

/** Attributes are either Literals or Identifiers. */
  final public LiteralNode attribute() throws ParseException, QueryException {
    LiteralNode lt;
    if (jj_2_24(2)) {
      lt = literal();
    } else if (jj_2_25(2)) {
      lt = identifier();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return lt;}
    throw new Error("Missing return statement in function");
  }

/** Identifiers are treated like literals (for parsing).. */
  final public LiteralNode identifier() throws ParseException, QueryException {
    Token       t;
    t = jj_consume_token(IDENTIFIER);
        // 
        {if (true) return new LiteralNode(t.kind, t.image);}
    throw new Error("Missing return statement in function");
  }

  final public LiteralNode literal() throws ParseException, QueryException {
    Token       t,t2 = null;
    if (jj_2_31(2)) {
      if (jj_2_26(2)) {
        t = jj_consume_token(INTEGER_LITERAL);
      } else if (jj_2_27(2)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
      } else if (jj_2_28(2)) {
        t = jj_consume_token(STRING_LITERAL);
      } else if (jj_2_29(2)) {
        t = jj_consume_token(TIME_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
        {if (true) return new LiteralNode(t.kind, t.image);}
    } else if (jj_2_32(2)) {
      t = jj_consume_token(BOOLEAN_LITERAL);
        if (t.image.startsWith("T"))       // "T", "TRUE"
            {if (true) return LiteralNode.LITERAL_TRUE;}
        else                                // "F", "FALSE" 
            {if (true) return LiteralNode.LITERAL_FALSE;}
    } else if (jj_2_33(2)) {
      t = jj_consume_token(DATE_LITERAL);
      if (jj_2_30(2)) {
        t2 = jj_consume_token(TIME_LITERAL);
      } else {
        
      }
        if (t2 == null)
            {if (true) return new LiteralNode(t.kind, t.image);}
        else    // both != null
            {if (true) return new LiteralNode(DATE_TIME_LITERAL, t.image + ' ' + t2.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String[] orderBy() throws ParseException, QueryException {
      ArrayList list = new ArrayList();
    jj_consume_token(ORDERBY);
    orderByList(list);
        String result[] = new String[list.size()];
        list.toArray(result);
        {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/** Recursivly build up a list of identifiers */
  final public void orderByList(ArrayList list) throws ParseException, QueryException {
    Token t;
    t = jj_consume_token(IDENTIFIER);
    if (jj_2_34(2)) {
      jj_consume_token(COMMA);
      orderByList(list);
    } else {
      
    }
        list.add (0, t.image);
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_2();
    jj_save(1, xla);
    return retval;
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_3();
    jj_save(2, xla);
    return retval;
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_4();
    jj_save(3, xla);
    return retval;
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_5();
    jj_save(4, xla);
    return retval;
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_6();
    jj_save(5, xla);
    return retval;
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_7();
    jj_save(6, xla);
    return retval;
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_8();
    jj_save(7, xla);
    return retval;
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_9();
    jj_save(8, xla);
    return retval;
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_10();
    jj_save(9, xla);
    return retval;
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_11();
    jj_save(10, xla);
    return retval;
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_12();
    jj_save(11, xla);
    return retval;
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_13();
    jj_save(12, xla);
    return retval;
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_14();
    jj_save(13, xla);
    return retval;
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_15();
    jj_save(14, xla);
    return retval;
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_16();
    jj_save(15, xla);
    return retval;
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_17();
    jj_save(16, xla);
    return retval;
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_18();
    jj_save(17, xla);
    return retval;
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_19();
    jj_save(18, xla);
    return retval;
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_20();
    jj_save(19, xla);
    return retval;
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_21();
    jj_save(20, xla);
    return retval;
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_22();
    jj_save(21, xla);
    return retval;
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_23();
    jj_save(22, xla);
    return retval;
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_24();
    jj_save(23, xla);
    return retval;
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_25();
    jj_save(24, xla);
    return retval;
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_26();
    jj_save(25, xla);
    return retval;
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_27();
    jj_save(26, xla);
    return retval;
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_28();
    jj_save(27, xla);
    return retval;
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_29();
    jj_save(28, xla);
    return retval;
  }

  final private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_30();
    jj_save(29, xla);
    return retval;
  }

  final private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_31();
    jj_save(30, xla);
    return retval;
  }

  final private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_32();
    jj_save(31, xla);
    return retval;
  }

  final private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_33();
    jj_save(32, xla);
    return retval;
  }

  final private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_34();
    jj_save(33, xla);
    return retval;
  }

  final private boolean jj_3_19() {
    if (jj_scan_token(EXAMPLE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(OPEN)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_28() {
    if (jj_scan_token(STRING_LITERAL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_26() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_18() {
    if (jj_scan_token(NOT)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(OPEN)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_31() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    } else if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_17() {
    if (jj_3R_2()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_25() {
    if (jj_3R_3()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_3() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_11() {
    if (jj_scan_token(LIKE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_16() {
    if (jj_scan_token(ISDEST)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_24() {
    if (jj_3R_6()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_10() {
    if (jj_scan_token(ISIN)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_15() {
    if (jj_scan_token(ISSOURCE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_9() {
    if (jj_scan_token(GE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_34() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_3R_7()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_5() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_8() {
    if (jj_scan_token(LE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_14() {
    if (jj_scan_token(MATCHES)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_7() {
    if (jj_scan_token(GT)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_7() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_13() {
    if (jj_scan_token(OR)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_30() {
    if (jj_scan_token(TIME_LITERAL)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_4() {
    if (jj_scan_token(TEXT)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3_6() {
    if (jj_scan_token(LT)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_2() {
    if (jj_scan_token(ALLORNONE)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }
